testData/inspections/string-assigned-to-nil/comparison.go
package main

func main() {
	var var1 string;
	<error descr="String cannot be nil"><caret>nil</error> == var1
}
